--- a/EasyPAI_front/package.json
+++ b/EasyPAI_front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "sonner": "^0.3.5",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
