--- a/EasyPAI_front/package.json
+++ b/EasyPAI_front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "^2.22.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
@@ -17,6 +18,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "sonner": "^0.3.5",
     "supabase": "^1.62.3",
