--- a/EasyPAI_front/package.json
+++ b/EasyPAI_front/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.22.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "loglevel": "^1.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
